--- a/docs/_posts/2024-09-30-Week_9.md
+++ b/docs/_posts/2024-09-30-Week_9.md
@@ -62,7 +62,7 @@ Snippets have been created for functions such as for, while... function and clas
 
 ## Beta Testing
 
-Testing of https://github.com/JdeRobot/RoboticsAcademy/pull/2749 for frontend update and effectiveness of hoover exercises.
+Testing of https://github.com/JdeRobot/RoboticsAcademy/pull/2749 for frontend update and effectiveness of vacuum exercises.
 
 ## Upgrading GPU usage
 
