--- a/docs/_posts/2024-10-07-Week_10.md
+++ b/docs/_posts/2024-10-07-Week_10.md
@@ -17,17 +17,13 @@ comments: true
 ## Testing
 
 - Testing Update montecarlo frontend #2771 
-
 - Testing Change canvas to image in Rescue people frontend #2773 
-
 - Testing Update obstacle avoidance frontend #2775 
-
 - Testing Modifying Vacuums exercise frontend #2749 
 
 ## Working on harmonic
 
-Work:
-- Added gazebo models to cmake-list.
-- Added and placed robot in the house.
-- Fixed missing dependencies.
-- Tested harmonic world loading.
+A universe has been created and simplified with a simple robot, not yet supported by ros2. 
+All the necessary dependencies have been added in RoboticsInfraestructure.
+
+RoboticsApplicationManager has been modified to be able to manage gazebo harmonic worlds, stop them, reset them...
