--- a/docs/_posts/2024-10-07-Week_10.md
+++ b/docs/_posts/2024-10-07-Week_10.md
@@ -1,6 +1,6 @@
 ---
-title: Creating April Tags and testing
-date: 2024-09-30 9:00:00 +0100
+title: Testing and integrating exercises in ra
+date: 2024-10-07 9:00:00 +0100
 tags: [weekly progress]
 author: david
 img_path: /assets/img/
