--- a/docs/_posts/2024-10-21-Week_11_12.md
+++ b/docs/_posts/2024-10-21-Week_11_12.md
@@ -1,6 +1,6 @@
 ---
-title: Creating April Tags and testing
-date: 2024-09-30 9:00:00 +0100
+title: Ros gz bridge for harmonic and testing
+date: 2024-10-21 9:00:00 +0100
 tags: [weekly progress]
 author: david
 img_path: /assets/img/
