--- a/docs/_posts/2024-10-21-Week_11_12.md
+++ b/docs/_posts/2024-10-21-Week_11_12.md
@@ -11,7 +11,7 @@ comments: true
 ## Index
 
 - [Testing](#testing)
-- [Some issues](#some_issues)
+- [Some issues](#some-issues)
 - [Working on harmonic](#working-on-harmonic)
 
 
