--- a/docs/_posts/2024-10-28-Week_13.md
+++ b/docs/_posts/2024-10-28-Week_13.md
@@ -22,5 +22,13 @@ test:
 
 ## Working on harmonic
 
-The world has been successfully launched. Fixed errors in the paths to some models and changed the name of the world because ‘world’ is a reserved name.
-The robot is launched correctly and the topics are published.
+### Launching world problems
+The world could not be launched for several reasons, a reserved world name was being used by gazebo. In addition, some of the resources imported by the world contained an erroneous path.
+
+
+### Frontend and libraries
+The frontend has been updated to be able to receive the image. In addition, the `HAL.py` and `GUI.py` programs have been updated to be able to receive information from the topics and publish in them.
+
+
+### Launching robot
+The robot is now launched correctly and the topics are published. Right now the robot is able to receive speeds through the program and moves perfectly.
