--- a/docs/_posts/2024-11-04-Week_14.md
+++ b/docs/_posts/2024-11-04-Week_14.md
@@ -27,4 +27,20 @@ In RA, `HAL.py` has been updated to use these new topics and the robot works per
 
 ## Solving errors
 
+
+### World camera pose
 The gazebo camera pose was not modified correctly because the gazebo client and gazebo server have to be launched separately. Once the client is launched, a camera pose is configured (default) and then cannot be changed. Once discovered, the pose has simply been modified in the client.
+
+
+### Duplicate topics
+The camera topics work differently, as they do not always work correctly using the ros gz bridge that is used for the other topics, and for this reason, duplicate topics were displayed. Now a specific bridge is used for the camera topic.
+
+
+### Lanscape
+The problem with the heightmap turned out to be a bug in my local installation, so it didn't need to be fixed. On the other hand, a lot of lag is generated with the loading of the terrain, so we are looking for solutions to simplify the scenario.
+
+### Update frontend and fix topics pub
+The frontend and the exercise-specific files have been modified to be able to extract information from the topics that publish the images and to display the image in the frontend. 
+
+### Reset button
+The reset button still doesn't work, every run of the exercise requires restarting the docker.
